[project]
name = "autoscraper-alirezamika"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "requests>=2.32.3",
]

# Add license information:
license = { name = "MIT", text = "MIT License text goes here." }
